# spatial-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_PDF_REVIEW.md  FINAL_REVIEW.md  LICENSE  README.md  name_conflict_research.md  paper_review_notes.md  pdf_review_atlaspro.md  pdf_review_final.md  pdf_review_findings.md  pdf_review_v2.md  pdf_review_v3.md  pyproject.toml  research_notes.md
arxiv/: README.md  missing_refs.bib  neurips_2023.sty  references.bib  references_full.bib  spatialeval.aux  spatialeval.bbl  spatialeval.blg  spatialeval.out  spatialeval.tex
arxiv/figures/: generate_atlaspro_diagram.py  generate_figure4.py  generate_placeholder.py  regenerate_figures.py
data/: dataset_summary.json  generate_dataset.py  generate_dataset_v2.py  generate_placeholder_results.py
data/constraint_based_placement/easy/: tasks.json
data/constraint_based_placement/hard/: tasks.json
data/constraint_based_placement/medium/: tasks.json
data/coordinate_understanding/easy/: tasks.json
data/coordinate_understanding/hard/: tasks.json
data/coordinate_understanding/medium/: tasks.json
data/distance_computation/easy/: tasks.json
data/distance_computation/hard/: tasks.json
data/distance_computation/medium/: tasks.json
data/geometric_reasoning/easy/: tasks.json
data/geometric_reasoning/hard/: tasks.json
data/geometric_reasoning/medium/: tasks.json
data/navigation_pathfinding/easy/: tasks.json
data/navigation_pathfinding/hard/: tasks.json
data/navigation_pathfinding/medium/: tasks.json
data/network_infrastructure/easy/: tasks.json
data/network_infrastructure/hard/: tasks.json
data/network_infrastructure/medium/: tasks.json
data/pattern_recognition/easy/: tasks.json
data/pattern_recognition/hard/: tasks.json
data/pattern_recognition/medium/: tasks.json
data/real_estate/easy/: tasks.json
data/real_estate/hard/: tasks.json
data/real_estate/medium/: tasks.json
data/real_estate_geospatial/easy/: tasks.json
data/real_estate_geospatial/hard/: tasks.json
data/real_estate_geospatial/medium/: tasks.json
data/resource_allocation/easy/: tasks.json
data/resource_allocation/hard/: tasks.json
docs/: CODEBOOK.md  EXPANDED_BENCHMARK_DESIGN.md
research/: industry_analysis.md  metrics_design.md
results/: leaderboard.md  placeholder_results.json
src/spatialeval/: __init__.py  data.py
src/spatialeval/models/: base.py  (+3 more)
src/spatialops/: __init__.py  cli.py
tests/: test_data.py  test_metrics.py
(+19 files in other folders)
