[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialeval"
version = "1.0.0"
authors = [
    {name = "SpatialEval Team", email = "spatialeval-team@manus.ai"},
]
description = "A comprehensive benchmark for evaluating 2D spatial reasoning in Large Language Models."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "benchmark", "spatial-reasoning", "llm", "evaluation"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=2.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
]
eval = [
    "docker>=6.0.0",
    "pytest>=7.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "spatialeval[inference,eval,dev,docs]",
]

[project.urls]
"Homepage" = "https://github.com/glo26/spatial-benchmark"
"Documentation" = "https://github.com/glo26/spatial-benchmark/tree/main/docs"
"Bug Tracker" = "https://github.com/glo26/spatial-benchmark/issues"
"Paper" = "https://arxiv.org/abs/XXXX.XXXXX"

[project.scripts]
spatialeval = "spatialeval.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["spatialeval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=spatialeval --cov-report=term-missing"
